--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=http://localhost:4242
+REACT_APP_API_LOCAL_URL=http://localhost:4242
 REACT_APP_STRIPE_API_KEY=pk_test_R59H51fw2NragH95O9OatOgT
+REACT_APP_API_URL=https://v2.quickmall24.com/
