--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ REACT_APP_API_LOCAL_URL=http://localhost:4242
 REACT_APP_STRIPE_API_KEY=pk_test_R59H51fw2NragH95O9OatOgT
 REACT_APP_API_URL=https://v2.quickmall24.com
 #https://www.quickmall24.com
-#http://localhost:9001
+#LOCAL_BACKEND_API=http://localhost:9001
+#https://v2.quickmall24.com
