--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-modal": "^3.16.1",
