--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "stream-http": "^3.2.0",
     "swiper": "^11.0.3",
     "url": "^0.11.3",
