update paypal csv patht

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 REACT_APP_API_LOCAL_URL=http://localhost:4242
 REACT_APP_STRIPE_API_KEY=pk_test_R59H51fw2NragH95O9OatOgT
 REACT_APP_API_URL=https://v2.quickmall24.com
-#https://www.quickmall24.com
+REACT_APP_BASE_URL=http://localhost:3000
 #LOCAL_BACKEND_API=http://localhost:9001
 #https://v2.quickmall24.com
 #https://v3.quickmall24.com
+#http://localhost:3000
+#https://www.quickmall24.com
