--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "jspdf": "^2.5.1",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-use-intercom": "^5.3.0",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "stream-http": "^3.2.0",
     "swiper": "^11.0.3",
     "url": "^0.11.3",
